syntax = "proto3";

package play.example.module.account.message;

message LoginProto {
    string platform = 1;
    int32 serverId = 2;
    string channel = 3;
    string account = 4;
    // ...
}

message PongProto {
    string msg = 1;
}