syntax = "proto3";

package play.example.request;

message RequestProto {
   bool b1 = 1;
   bool b2 = 2;
   bool b3 = 3;

   int32 i1 = 11;
   int32 i2 = 12;
   int32 i3 = 13;

   int64 l1 = 21;
   int64 l2 = 22;
   int64 l3 = 23;

   string s1 = 31;
   string s2 = 32;
   string s3 = 33;

   repeated int32 intList = 41;
   repeated int64 longList = 42;
   bytes byteList = 43;
}
